crates/wac-parser/tests/resolution/fail/missing-interface-export.wac
package test:comp;

import x: interface {
};

let i = new foo:bar { x };
